--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
+  sdk: '>=3.8.1 <4.0.0' # تم تعديل نطاق الـ SDK ليتوافق مع إصدارك الحالي 3.8.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,7 +35,10 @@ dependencies:
   supabase_flutter: ^2.0.0
   flutter_slidable: ^4.0.0
   flutter_local_notifications: ^17.1.2
-  shared_preferences: ^2.2.0 # تأكد من استخدام أحدث إصدار
+  shared_preferences: ^2.2.0
+  image_picker: ^1.1.0
+  image_compression_flutter: ^1.0.4 # 🔴 تم تخفيض الإصدار ليتوافق مع الـ SDK الحالي
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,13 +47,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,8 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
-  #   - images/a_dot_ham.jpeg
+    - images/ # هذا المسار جيد إذا كان مجلد 'images' يحتوي على صورك
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -81,14 +78,4 @@ flutter:
   fonts:
     - family: Schyler
       fonts:
-        - asset: font/Mitchell-Demo.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+        - asset: font/Mitchell-Demo.ttf # تأكد من أن المسار الصحيح هو 'font' وليس 'fonts'
